# MinimalVst3HostForWindows

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_NOTES.md  README.md  build-mingw.bat  build.bat
src/: MinimalVst3HostForWindows.cpp
